--- a/provisioning/inventory.yml
+++ b/provisioning/inventory.yml
@@ -1,7 +1,9 @@
 ---
 all:
   hosts:
-    asterisk:
-      ansible_host: 192.168.56.10
+    vagrant_box:
+      ansible_host: 192.168.33.10
       ansible_user: vagrant
-      ansible_ssh_private_key_file: .vagrant/machines/asterisk/virtualbox/private_key
+      ansible_ssh_pass: vagrant
+      ansible_ssh_private_key_file: ~/.vagrant.d/insecure_private_key
+      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
